# npm-malicious-bits

./: README.md  pyproject.toml
npm_malicious_bits/: aikido_client.py  main.py  models.py
